objects/Time_Sheet_Daily_Totals__c.object
<CustomObject>
    <fields>
        <fullName>Download_to_Ipad__c</fullName>
        <formula>If(Contains(Related_User__c ,$User.Id),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download to Ipad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FixedValue1__c</fullName>
        <formula>&quot;FH&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedValue2__c</fullName>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedValue3__c</fullName>
        <formula>&quot;2002&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FixedValue3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <formula>Technician__r.SVMXC__Salesforce_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Anniversary_max__c</fullName>
        <formula>IF(VALUE(Time_Entry_Start_Date__c)&lt;VALUE(TEXT(year(Technician__r.FST_Anniversary__c)+1)+CASE(Month( Technician__r.FST_Anniversary__c ),10,&apos;10&apos;,11,&apos;11&apos;,12,&apos;12&apos;,1,&apos;01&apos;,2,&apos;02&apos;,3,&apos;03&apos;,4,&apos;04&apos;,5,&apos;05&apos;,6,&apos;06&apos;,7,&apos;07&apos;,8,&apos;08&apos;,9,&apos;09&apos;,&apos;0&apos;)+CASE(Day( Technician__r.FST_Anniversary__c ),1,&apos;01&apos;,2,&apos;02&apos;,3,&apos;03&apos;,4,&apos;04&apos;,5,&apos;05&apos;,6,&apos;06&apos;,7,&apos;07&apos;,8,&apos;08&apos;,9,&apos;09&apos;,10,&apos;10&apos;,11,&apos;11&apos;,12,&apos;12&apos;,13,&apos;13&apos;,14,&apos;14&apos;,15,&apos;15&apos;,16,&apos;16&apos;,17,&apos;17&apos;,18,&apos;18&apos;,19,&apos;19&apos;,20,&apos;20&apos;,21,&apos;21&apos;,22,&apos;22&apos;,23,&apos;23&apos;,24,&apos;24&apos;,25,&apos;25&apos;,26,&apos;26&apos;,27,&apos;27&apos;,28,&apos;28&apos;,29,&apos;29&apos;,30,&apos;30&apos;,31,&apos;31&apos;,&apos;0&apos;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Anniversary max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Anniversary_min__c</fullName>
        <formula>IF(VALUE(Time_Entry_Start_Date__c)&gt;=VALUE(TEXT(year(Technician__r.FST_Anniversary__c))+CASE(Month( Technician__r.FST_Anniversary__c ),10,&apos;10&apos;,11,&apos;11&apos;,12,&apos;12&apos;,1,&apos;01&apos;,2,&apos;02&apos;,3,&apos;03&apos;,4,&apos;04&apos;,5,&apos;05&apos;,6,&apos;06&apos;,7,&apos;07&apos;,8,&apos;08&apos;,9,&apos;09&apos;,&apos;0&apos;)+CASE(Day( Technician__r.FST_Anniversary__c ),1,&apos;01&apos;,2,&apos;02&apos;,3,&apos;03&apos;,4,&apos;04&apos;,5,&apos;05&apos;,6,&apos;06&apos;,7,&apos;07&apos;,8,&apos;08&apos;,9,&apos;09&apos;,10,&apos;10&apos;,11,&apos;11&apos;,12,&apos;12&apos;,13,&apos;13&apos;,14,&apos;14&apos;,15,&apos;15&apos;,16,&apos;16&apos;,17,&apos;17&apos;,18,&apos;18&apos;,19,&apos;19&apos;,20,&apos;20&apos;,21,&apos;21&apos;,22,&apos;22&apos;,23,&apos;23&apos;,24,&apos;24&apos;,25,&apos;25&apos;,26,&apos;26&apos;,27,&apos;27&apos;,28,&apos;28&apos;,29,&apos;29&apos;,30,&apos;30&apos;,31,&apos;31&apos;,&apos;0&apos;)),1,0)</formula>
        <label>Tech Anniversary min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Time Sheet Daily Totals</relationshipLabel>
        <relationshipName>Time_Sheet_Daily_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Entry_End_Date__c</fullName>
        <label>Time Entry End Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Start_Date__c</fullName>
        <label>Time Entry Start Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Total__c</fullName>
        <label>Time Entry Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>SVMXC_Timesheet__c</referenceTo>
        <relationshipLabel>Time Sheet Daily Totals</relationshipLabel>
        <relationshipName>Time_Sheet_Daily_Totals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Sheet Daily Totals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_Entry_Start_Date__c</columns>
        <columns>Time_Entry_End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Time_Entry_Total__c</columns>
        <columns>Timesheet__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSD-{00000000}</displayFormat>
        <label>Time Sheet Daily Totals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Daily Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>